--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
+- name: "daemon-reload"
+  systemd:
+    daemon_reload: yes
+
 - name: "restart docker"
-  service:
+  systemd:
     name: docker
     state: restarted
