--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -78,7 +78,7 @@ docker_login_credentials: {}
 
 # install
 docker_state: "present"
-docker_version: "17.12*"
+docker_version: "20.10*"
 docker_service_enabled: yes
 
 docker_requirements:
@@ -91,3 +91,5 @@ docker_requirements:
 
 docker_gpg_key_url: "https://download.docker.com/linux/{{ ansible_distribution|lower }}/gpg"
 docker_repository: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable"
+docker_compose_url:  "https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-linux-x86_64"
+docker_compose_plugins_dir: "/usr/local/lib/docker/cli-plugins"
